tests/ui/type-alias-impl-trait/lazy_subtyping_of_opaques.stderr
error[E0277]: expected a `FnOnce()` closure, found `()`
  --> $DIR/lazy_subtyping_of_opaques.rs:11:23
   |
LL |     Thunk::new(|cont| cont)
   |                       ^^^^ expected an `FnOnce()` closure, found `()`
   |
   = help: the trait `FnOnce()` is not implemented for `()`
   = note: wrap the `()` in a closure with no arguments: `|| { /* code */ }`

error[E0277]: expected a `FnOnce()` closure, found `()`
  --> $DIR/lazy_subtyping_of_opaques.rs:9:23
   |
LL | fn reify_as_tait() -> Thunk<Tait> {
   |                       ^^^^^^^^^^^ expected an `FnOnce()` closure, found `()`
   |
   = help: the trait `FnOnce()` is not implemented for `()`
   = note: wrap the `()` in a closure with no arguments: `|| { /* code */ }`

error[E0308]: mismatched types
  --> $DIR/lazy_subtyping_of_opaques.rs:11:5
   |
LL |     Thunk::new(|cont| cont)
   |     ^^^^^^^^^^^^^^^^^^^^^^^ expected `Thunk<_>`, found `()`
   |
   = note: expected struct `Thunk<_>`
           found unit type `()`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
